--- a/Rcode/length_age_comps/rec_agecomps_for_datafile.Rmd
+++ b/Rcode/length_age_comps/rec_agecomps_for_datafile.Rmd
@@ -4,6 +4,8 @@ output: html_document
 date: "2025-03-30"
 ---
 
+Use this document as a source for Rec age comp code for pulling data into each of the model runs. I will comment out the code so that it is easy to see what should go into the models.
+
 ```{r setup, include=FALSE}
 rm(list = ls())
 
@@ -24,7 +26,8 @@ inputs <- SS_read(dir = model_2017_path, ss_new = TRUE)
 ```
 
 1. CA_REC CAAL 1983-1996, aged by WDFW
-  *no change* pull in old data
+  *no change* pull in old data and use in all model runs
+  Future assessments: find the Traci file and make sure the ages and lengths are correct.
 
 ```{r}
 ca_rec_caal_1983_1996 <- inputs$dat$agecomp |>
@@ -34,7 +37,7 @@ ca_rec_caal_1983_1996 <- inputs$dat$agecomp |>
 ```
 
 2. CA_REC MAAL Ghost 1983-1996, aged by WDFW
-  *no change* pull in old data
+  *no change* pull in old data and use in all model runs
 
 ```{r}
 ca_rec_maal_1983_1996 <- inputs$dat$agecomp |>
@@ -46,30 +49,38 @@ ca_rec_maal_1983_1996 <- inputs$dat$agecomp |>
 3. CA_REC CAAL Don Pearson Data 1979-1984, aged by Betty
   *divide all Nsamp and Ages by 2* - everything was doubled by accident in last assessment
 ```{r}
+# Use this first section to grab the old data with out any changes! 
 ca_rec_caal_Don <- inputs$dat$agecomp |>
   filter(fleet == 3) |>
   filter(year >= 1979 & year <= 1984) |>
   filter(ageerr == 2)
+
+## For the Update, add this next section to correct for the doubling mistake
 ca_rec_caal_Don[,9:75] <- ca_rec_caal_Don[,9:75]/2
 ```
 
 4. CA_REC CAAL John Budrick Data 2009-2016, aged by Betty
   *divide all Nsamp and Ages by 2* - No new data, all data we got matched perfectly with 2017 assessment data, so just use old data.
 ```{r}
+# Use this first section to grab the old data with out any changes! 
 ca_rec_caal_John <- inputs$dat$agecomp |>
   filter(fleet == 3) |>
   filter(year >= 2009 & year <= 2016)
+
+## For the Update, add this next section to correct for the doubling mistake
 ca_rec_caal_John[,9:75] <- ca_rec_caal_John[,9:75]/2
 ```
 
 5. CA_REC MAAL Ghost, Don's data
   *need to rebuild from CAAL* - Nsamp column was duplicated (and is wrong), so it shifted all of the ages forward by 1 and dropped the last age column
 ```{r}
+# Use this first section to grab the old data with out any changes! 
 old_ca_rec_maal_Don <- inputs$dat$agecomp |>
   filter(fleet == -3) |>
   filter(year >= 1979 & year <= 1984) |>
   filter(ageerr == 2)
 
+## For the Update, add this next section to fix old mistake
 # Take CAAL and group it so it matches MAAL structure, re-add the correct columns
 ca_rec_maal_Don <- ca_rec_caal_Don %>%
   group_by(year) %>%  # Retain key columns
@@ -79,12 +90,17 @@ ca_rec_maal_Don <- cbind(old_ca_rec_maal_Don[,1:8],ca_rec_maal_Don[,69],ca_rec_m
 ```
 
 6. CA_REC MAAL Ghost, John's data
-  *need to rebuild from CAAL* - Nsamp column is totally wrong, All the age data looks correct, but how they added the Nsamps together is off. Do the same thing as above and just rebuild from CAAL. Confirmed that the data matched the MAAL that I calculated using nwfsc code
+  *need to rebuild from CAAL* - Nsamp column is totally wrong, All the age data looks correct, but how they added the Nsamps together is off. Do the same thing as above and just rebuild from CAAL. Confirmed that the data matched the MAAL that I calculated using nwfsc code.
+  Also, Vlada says that Nsamp column for MAAL data DOES NOT MATTER...but for an update, lets at least make it consistent with everything else in that Nsamp = "total samples".
+  It is a lot easier to look for mistakes in the data if the Nsamps = total samples, and is consistent throughout the datafile.
 ```{r}
+# Use this first section to grab the old data with out any changes! 
 old_ca_rec_maal_John <- inputs$dat$agecomp |>
   filter(fleet == -3) |>
   filter(year >= 2009 & year <= 2016)
 
+## For the Update, add this next section to fix old mistake
+# Take CAAL and group it so it matches MAAL structure, re-add the correct columns
 ca_rec_maal_John <- ca_rec_caal_John %>%
   group_by(year) %>%  # Retain key columns
   summarise(across(starts_with("a"), \(x) sum(x, na.rm = TRUE)),  # Sum age columns
@@ -92,16 +108,21 @@ ca_rec_maal_John <- ca_rec_caal_John %>%
 ca_rec_maal_John <- cbind(old_ca_rec_maal_John[,1:8],ca_rec_maal_John[,69],ca_rec_maal_John[,3:68])
 ```
 
+
+####################### start here
+
 7. OR_REC CAAL
   *doubling issue here too* - Also fixing Ageing Error column and adding updated Ages
   - If Ali or Vlada thinks we should ignore the new ages in 2015, then just use all old data and divide by 2
 ```{r}
-# First, bring in old data from 1979-2002
+# Use this first section to grab the old data with out any changes! 
+# Bring in old data from 1979-2002
 or_rec_caal <- inputs$dat$agecomp |>
   filter(fleet == 6) |>
   filter(year >= 1979 & year <= 2002)
 
-# Next, fix doubling problem
+# Next, fix doubling problem, without adding any new data
+# Use for a model run where we fix issues before adding new data
 or_rec_caal[,9:75] <- or_rec_caal[,9:75]/2
 
 # Then, Bring in new 2009-2016 data - some of the ages were updated (Check with Ali)
